--- a/assets-src/styles/sass/30-base/_typography.scss
+++ b/assets-src/styles/sass/30-base/_typography.scss
@@ -27,12 +27,6 @@ h1 {
 
 }
 
-.txt-mercury {
-
-	@include txt-mercury;
-
-}
-
 h1,
 .txt-venus {
 
