--- a/assets-src/styles/sass/80-templates/_landing.scss
+++ b/assets-src/styles/sass/80-templates/_landing.scss
@@ -5,12 +5,6 @@
 .landing,
 .ecosystem {
 
-	h1 {
-
-		@include txt-mercury;
-
-	}
-
 	#breadcrumb {
 
 		background-color: $mist-gray;
