--- a/assets-src/styles/sass/80-templates/_listing.scss
+++ b/assets-src/styles/sass/80-templates/_listing.scss
@@ -16,14 +16,6 @@
 
 	}
 
-	h1 {
-
-		@include txt-mercury;
-
-		margin-bottom: rem(32);
-
-	}
-
 	main,
 	#main {
 
